tests/compile_fail/global_map_lifetime_1.stderr
error: lifetime may not live long enough
 --> $DIR/global_map_lifetime_1.rs:9:29
  |
9 |   let _ = global.map(|that| that);
  |                       ----- ^^^^ returning this value requires that `'1` must outlive `'2`
  |                       |   |
  |                       |   return type of closure is &'2 rusty_v8::Local<'_, rusty_v8::Integer>
  |                       has type `&'1 rusty_v8::Local<'_, rusty_v8::Integer>`

error: lifetime may not live long enough
 --> $DIR/global_map_lifetime_1.rs:9:29
  |
9 |   let _ = global.map(|that| that);
  |                       ----- ^^^^ returning this value requires that `'3` must outlive `'4`
  |                       |   |
  |                       |   return type of closure is &rusty_v8::Local<'4, rusty_v8::Integer>
  |                       has type `&rusty_v8::Local<'3, rusty_v8::Integer>`
